; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/net80211/wesside/wesside/extr_wesside.c_do_llc.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/net80211/wesside/wesside/extr_wesside.c_do_llc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llc = type { %struct.TYPE_4__, i8*, i8* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@LLC_SNAP_LSAP = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_llc(i8* %0, i16 zeroext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i16, align 2
  %5 = alloca %struct.llc*, align 8
  store i8* %0, i8** %3, align 8
  store i16 %1, i16* %4, align 2
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.llc*
  store %struct.llc* %7, %struct.llc** %5, align 8
  %8 = load %struct.llc*, %struct.llc** %5, align 8
  %9 = call i32 @memset(%struct.llc* %8, i32 0, i32 24)
  %10 = load i8*, i8** @LLC_SNAP_LSAP, align 8
  %11 = load %struct.llc*, %struct.llc** %5, align 8
  %12 = getelementptr inbounds %struct.llc, %struct.llc* %11, i32 0, i32 2
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** @LLC_SNAP_LSAP, align 8
  %14 = load %struct.llc*, %struct.llc** %5, align 8
  %15 = getelementptr inbounds %struct.llc, %struct.llc* %14, i32 0, i32 1
  store i8* %13, i8** %15, align 8
  %16 = load %struct.llc*, %struct.llc** %5, align 8
  %17 = getelementptr inbounds %struct.llc, %struct.llc* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i32 3, i32* %19, align 8
  %20 = load i16, i16* %4, align 2
  %21 = call i32 @htons(i16 zeroext %20)
  %22 = load %struct.llc*, %struct.llc** %5, align 8
  %23 = getelementptr inbounds %struct.llc, %struct.llc* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  store i32 %21, i32* %25, align 4
  ret void
}

declare dso_local i32 @memset(%struct.llc*, i32, i32) #1

declare dso_local i32 @htons(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
